sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:23: error: illegal start of simple expression
  }
  ^